--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   "dependencies": {
     "@google-cloud/pubsub": "^0.31.0",
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.4.0",
     "firebase-functions": "^3.2.0",
-    "helmet": "^3.20.1"
+    "helmet": "^3.22.0"
   }
 }
